reference-architectures/multi-cluster-patterns/gcloud/deploy-app/http_route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: public-store-route
  namespace: store
  labels:
    gateway: external-http
spec:
  hostnames:
  - "store.example.com"
  parentRefs:
  - name: external-http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /a
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: store-a
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /b
    backendRefs:
      - group: net.gke.io
        kind: ServiceImport
        name: store-b
        port: 8080
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: store
      port: 8080
